examples/test/testpolicy14167.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14167
  namespace: namespace56
spec:
  podSelector:
    matchLabels:
      key14: value47
      key3: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value43
          key11: value36
      podSelector:
        matchLabels:
          key48: value18
          key41: value17
          key26: value42
